Edited makefile, rearranged file structure.

--- a/notebooks/lecture16-decision-trees.ipynb
+++ b/notebooks/lecture16-decision-trees.ipynb
@@ -10,7 +10,7 @@
     }
    },
    "source": [
-    "<left><img width=25% src=\"img/cornell_tech2.svg\"></left>\n",
+    "<left><img width=25% src=\"../img/cornell_tech2.svg\"></left>\n",
     "\n",
     "# Lecture 16: Tree-Based Algorithms\n",
     "\n",
@@ -521,7 +521,7 @@
    "source": [
     "We can also illustrate decision trees via this figure from Hastie et al.\n",
     "\n",
-    "<left><img width=50% src=\"img/decision_tree.png\"></left>"
+    "<left><img width=50% src=\"../img/decision_tree.png\"></left>"
    ]
   },
   {
@@ -566,7 +566,7 @@
     }
    },
    "source": [
-    "<left><img width=25% src=\"img/cornell_tech2.svg\"></left>\n",
+    "<left><img width=25% src=\"../img/cornell_tech2.svg\"></left>\n",
     "# Part 2: Learning Decision Trees\n",
     "\n",
     "We saw how decision trees are represented. How do we now learn them from data?\n"
@@ -649,7 +649,7 @@
    "source": [
     "We can also illustrate decision trees via this figure from Hastie et al.\n",
     "\n",
-    "<left><img width=50% src=\"img/decision_tree.png\"></left>"
+    "<left><img width=50% src=\"../img/decision_tree.png\"></left>"
    ]
   },
   {
@@ -825,7 +825,7 @@
     }
    },
    "source": [
-    "<left><img width=25% src=\"img/cornell_tech2.svg\"></left>\n",
+    "<left><img width=25% src=\"../img/cornell_tech2.svg\"></left>\n",
     "# Part 3: Bagging\n",
     "\n",
     "Next, we are going to see a general technique to improve the performance of machine learning algorithms.\n",
@@ -1165,7 +1165,7 @@
     }
    },
    "source": [
-    "<left><img width=25% src=\"img/cornell_tech2.svg\"></left>\n",
+    "<left><img width=25% src=\"../img/cornell_tech2.svg\"></left>\n",
     "# Part 4: Random Forests\n",
     "\n",
     "Next, let's see how bagging can be applied to decision trees. This will also provide us with a new algorithm.\n"
@@ -1223,7 +1223,7 @@
    "source": [
     "We can also illustrate decision trees via this figure from Hastie et al.\n",
     "\n",
-    "<left><img width=50% src=\"img/decision_tree.png\"></left>"
+    "<left><img width=50% src=\"../img/decision_tree.png\"></left>"
    ]
   },
   {
