--- a/notebooks/lecture17-boosting.ipynb
+++ b/notebooks/lecture17-boosting.ipynb
@@ -10,7 +10,7 @@
     }
    },
    "source": [
-    "<left><img width=25% src=\"img/cornell_tech2.svg\"></left>\n",
+    "<left><img width=25% src=\"../img/cornell_tech2.svg\"></left>\n",
     "\n",
     "# Lecture 17: Boosting\n",
     "\n",
@@ -614,7 +614,7 @@
     }
    },
    "source": [
-    "<left><img width=25% src=\"img/cornell_tech2.svg\"></left>\n",
+    "<left><img width=25% src=\"../img/cornell_tech2.svg\"></left>\n",
     "# Part 2: Additive Models\n",
     "\n",
     "Next, we are going to see another perspective on boosting and derive new boosting algorithms."
@@ -1158,7 +1158,7 @@
     }
    },
    "source": [
-    "<left><img width=25% src=\"img/cornell_tech2.svg\"></left>\n",
+    "<left><img width=25% src=\"../img/cornell_tech2.svg\"></left>\n",
     "# Part 3: Gradient Boosting\n",
     "\n",
     "We are now going to see another way of deriving boosting algorithms that is inspired by gradient descent."
@@ -1648,7 +1648,7 @@
    "source": [
     "This is best understood via a picture.\n",
     "\n",
-    "<center><img width=100% src=\"img/functional_gradient.png\"></center>"
+    "<center><img width=100% src=\"../img/functional_gradient.png\"></center>"
    ]
   },
   {
