Update with lecture 18.

--- a/notebooks/lecture18-neural-networks.ipynb
+++ b/notebooks/lecture18-neural-networks.ipynb
@@ -10,7 +10,7 @@
     }
    },
    "source": [
-    "<left><img width=25% src=\"img/cornell_tech2.svg\"></left>\n",
+    "<left><img width=25% src=\"../img/cornell_tech2.svg\"></left>\n",
     "\n",
     "# Lecture 18: Neural Networks\n",
     "\n",
@@ -123,7 +123,7 @@
     "In order to define an artifical neuron, let's look first at a biological one.\n",
     "\n",
     "<center>\n",
-    "<img width=60% src=\"img/nns/bio-neuron.png\">\n",
+    "<img width=60% src=\"../img/nns/bio-neuron.png\">\n",
     "</center>\n",
     "\n",
     "* Each neuron receives input signals from its dendrites\n",
@@ -145,7 +145,7 @@
     "* The body of the neuron sums the modulated inputs: $\\sum_{j=1}^d w_j \\cdot x_j$.\n",
     "* These go into the activation function that produces an ouput.\n",
     "<center>\n",
-    "<img width=\"55%\" src=\"img/nns/aneuron.jpeg\">\n",
+    "<img width=\"55%\" src=\"../img/nns/aneuron.jpeg\">\n",
     "</center>"
    ]
   },
@@ -618,7 +618,7 @@
     }
    },
    "source": [
-    "<left><img width=25% src=\"img/cornell_tech2.svg\"></left>\n",
+    "<left><img width=25% src=\"../img/cornell_tech2.svg\"></left>\n",
     "# Part 2: Artificial Neural Networks\n",
     "\n",
     "Let's now see how we can connect neurons into networks that form complex models that further mimic the brain."
@@ -667,7 +667,7 @@
     "\n",
     "A neural network is a directed graph in which a node is a neuron that takes as input the outputs of the neurons that are connected to it.\n",
     "<center>\n",
-    "<img src=\"img/nns/net-intro.png\">\n",
+    "<img src=\"../img/nns/net-intro.png\">\n",
     "</center>\n",
     "Networks are typically organized in layers."
    ]
@@ -703,7 +703,7 @@
    "source": [
     "The first output of the layer is a neuron with weights $w_1$:\n",
     "<center>\n",
-    "<img src=\"img/nns/layers-1.png\" width=60%>\n",
+    "<img src=\"../img/nns/layers-1.png\" width=60%>\n",
     "</center>    "
    ]
   },
@@ -717,7 +717,7 @@
    "source": [
     "The second neuron has weights $w_2$:\n",
     "<center>\n",
-    "<img src=\"img/nns/layers-2.png\" width=60%>\n",
+    "<img src=\"../img/nns/layers-2.png\" width=60%>\n",
     "</center>    "
    ]
   },
@@ -731,7 +731,7 @@
    "source": [
     "The third neuron has weights $w_3$:\n",
     "<center>\n",
-    "<img src=\"img/nns/layers-3.png\" width=60%>\n",
+    "<img src=\"../img/nns/layers-3.png\" width=60%>\n",
     "</center>    \n",
     "The parameters of the layer are $w_1, w_2, w_3$."
    ]
@@ -765,7 +765,7 @@
    "source": [
     "Visually, we can represent this as follows:\n",
     "<center>\n",
-    "<img src=\"img/nns/layers-4.png\" width=60%>\n",
+    "<img src=\"../img/nns/layers-4.png\" width=60%>\n",
     "</center>    "
    ]
   },
@@ -797,7 +797,7 @@
     "We can visualize this graphically as follows.\n",
     "\n",
     "<center>\n",
-    "<img src=\"img/nns/layers-L.png\" width=100%>\n",
+    "<img src=\"../img/nns/layers-L.png\" width=100%>\n",
     "</center>    "
    ]
   },
@@ -814,7 +814,7 @@
     "Let's implement a small two layer neural net with 3 hidden units.\n",
     "\n",
     "<center>\n",
-    "<img src=\"img/nns/nn-example.png\" width=60%>\n",
+    "<img src=\"../img/nns/nn-example.png\" width=60%>\n",
     "</center>    "
    ]
   },
@@ -941,7 +941,7 @@
     }
    },
    "source": [
-    "<left><img width=25% src=\"img/cornell_tech2.svg\"></left>\n",
+    "<left><img width=25% src=\"../img/cornell_tech2.svg\"></left>\n",
     "# Part 3: Backpropagation\n",
     "\n",
     "We have defined what is an artificial neural network.\n",
@@ -997,7 +997,7 @@
    "source": [
     "We can visualize this graphically as follows.\n",
     "\n",
-    "<img src=\"img/nns/layers-L.png\" width=100%>"
+    "<img src=\"../img/nns/layers-L.png\" width=100%>"
    ]
   },
   {
@@ -1145,7 +1145,7 @@
     "Let's start with a single layer $y = f(x;\\theta)$:\n",
     "\n",
     "<center>\n",
-    "<img width=\"800px\" src=\"img/nns/backprop/backprop-abstract-figure0.png\">\n",
+    "<img width=\"800px\" src=\"../img/nns/backprop/backprop-abstract-figure0.png\">\n",
     "</center>"
    ]
   },
@@ -1160,7 +1160,7 @@
     "With the output $y$, target label $\\hat{y}$, and loss function $J$, we can compute the loss (error) of the prediction.\n",
     "\n",
     "<center>\n",
-    "<img width=\"800\" src=\"img/nns/backprop/backprop-abstract-figure1.png\">\n",
+    "<img width=\"800\" src=\"../img/nns/backprop/backprop-abstract-figure1.png\">\n",
     "</center>"
    ]
   },
@@ -1177,7 +1177,7 @@
     "We first need to compute the gradients of the loss to the output.\n",
     "\n",
     "<center>\n",
-    "<img width=\"800\" src=\"img/nns/backprop/backprop-abstract-figure2.png\">\n",
+    "<img width=\"800\" src=\"../img/nns/backprop/backprop-abstract-figure2.png\">\n",
     "</center>"
    ]
   },
@@ -1192,7 +1192,7 @@
     "After we have those, then using the chain rule, we can  compute the gradients with respect to the network parameters $\\theta$.\n",
     "\n",
     "<center>\n",
-    "<img width=\"800\" src=\"img/nns/backprop/backprop-abstract-figure3.png\">\n",
+    "<img width=\"800\" src=\"../img/nns/backprop/backprop-abstract-figure3.png\">\n",
     "</center>"
    ]
   },
@@ -1207,7 +1207,7 @@
     "We can keep working upstream and compute gradients to the input. After that we finish the backpropagation in this layer.\n",
     "\n",
     "<center>\n",
-    "<img width=\"800\" src=\"img/nns/backprop/backprop-abstract-figure4.png\">\n",
+    "<img width=\"800\" src=\"../img/nns/backprop/backprop-abstract-figure4.png\">\n",
     "</center>"
    ]
   },
@@ -1222,7 +1222,7 @@
     "As you can see, this operation can be easily extended to more layers between the input and output.\n",
     "\n",
     "<center>\n",
-    "<img width=\"900\" src=\"img/nns/backprop/backprop-abstract-figure5.png\">\n",
+    "<img width=\"900\" src=\"../img/nns/backprop/backprop-abstract-figure5.png\">\n",
     "</center>"
    ]
   },
@@ -1237,7 +1237,7 @@
     "We can apply this process recursively to obtain derivatives for any number of layers.\n",
     "\n",
     "<center>\n",
-    "<img width=\"900\" src=\"img/nns/backprop/backprop-abstract-figure6.png\">\n",
+    "<img width=\"900\" src=\"../img/nns/backprop/backprop-abstract-figure6.png\">\n",
     "</center>"
    ]
   },
@@ -1263,7 +1263,7 @@
    },
    "source": [
     "<center>\n",
-    "<img width=\"450\" src=\"img/nns/backprop/backprop-twolayers-figure0.png\">\n",
+    "<img width=\"450\" src=\"../img/nns/backprop/backprop-twolayers-figure0.png\">\n",
     "</center>    \n",
     "\n",
     "For our two layer fully connected network with sigmoid activation, the network is composed of following functions:\n",
@@ -1303,7 +1303,7 @@
    },
    "source": [
     "<center>\n",
-    "<img width=\"700\" src=\"img/nns/backprop/backprop-twolayers-figure1.png\">\n",
+    "<img width=\"700\" src=\"../img/nns/backprop/backprop-twolayers-figure1.png\">\n",
     "</center>\n",
     "We can compute the output of the hidden layer, $\\mathbf{h}$:\n",
     "\n",
@@ -1319,7 +1319,7 @@
    },
    "source": [
     "<center>\n",
-    "<img width=\"700\" src=\"img/nns/backprop/backprop-twolayers-figure2.png\">\n",
+    "<img width=\"700\" src=\"../img/nns/backprop/backprop-twolayers-figure2.png\">\n",
     "</center>\n",
     "We can compute the output of the hidden layer, $\\mathbf{h}$:\n",
     "\n",
@@ -1338,7 +1338,7 @@
    },
    "source": [
     "<center>\n",
-    "<img width=\"700\" src=\"img/nns/backprop/backprop-twolayers-figure3.png\">\n",
+    "<img width=\"700\" src=\"../img/nns/backprop/backprop-twolayers-figure3.png\">\n",
     "</center>    \n",
     "We can compute the output of the hidden layer, $\\mathbf{h}$:\n",
     "\n",
@@ -1358,7 +1358,7 @@
    },
    "source": [
     "<center>\n",
-    "<img width=\"800\" src=\"img/nns/backprop/backprop-twolayers-figure4.png\">\n",
+    "<img width=\"800\" src=\"../img/nns/backprop/backprop-twolayers-figure4.png\">\n",
     "</center>\n",
     "Similarly we can get the output of $y$:\n",
     "\n",
@@ -1374,7 +1374,7 @@
    },
    "source": [
     "<center>\n",
-    "<img width=\"700\" src=\"img/nns/backprop/backprop-twolayers-figure5.png\">\n",
+    "<img width=\"700\" src=\"../img/nns/backprop/backprop-twolayers-figure5.png\">\n",
     "</center>\n",
     "Next, we compute the binary cross entropy loss with the target label $1$:\n",
     "$J(y, \\hat{y}) = - \\log (y) = 0.52699$\n",
@@ -1394,7 +1394,7 @@
    },
    "source": [
     "<center>\n",
-    "<img width=\"700\" src=\"img/nns/backprop/backprop-twolayers-figure5.png\">\n",
+    "<img width=\"700\" src=\"../img/nns/backprop/backprop-twolayers-figure5.png\">\n",
     "</center>\n",
     "We are going to compute the gradients to the weights in the output layer:\n",
     "$$\\frac{\\mathrm{d}J}{\\mathrm{d}{V}} = \\frac{\\mathrm{d}J}{\\mathrm{d}{y}} \\frac{\\mathrm{d}y}{\\mathrm{d}{V}}$$\n",
@@ -1412,7 +1412,7 @@
    },
    "source": [
     "<center>\n",
-    "<img width=\"700\" src=\"img/nns/backprop/backprop-twolayers-figure6.png\">\n",
+    "<img width=\"700\" src=\"../img/nns/backprop/backprop-twolayers-figure6.png\">\n",
     "</center>\n",
     "Applying these formulas, we obtain the gradients of $\\mathbf{V}$:\n",
     "\n",
@@ -1433,7 +1433,7 @@
    },
    "source": [
     "<center>\n",
-    "<img width=\"700\" src=\"img/nns/backprop/backprop-twolayers-figure6.png\">\n",
+    "<img width=\"700\" src=\"../img/nns/backprop/backprop-twolayers-figure6.png\">\n",
     "</center>\n",
     "\n",
     "Next, we want to compute gradients at the hidden layer:\n",
@@ -1450,7 +1450,7 @@
    },
    "source": [
     "<center>\n",
-    "<img width=\"600\" src=\"img/nns/backprop/backprop-twolayers-figure7.png\">\n",
+    "<img width=\"600\" src=\"../img/nns/backprop/backprop-twolayers-figure7.png\">\n",
     "</center>\n",
     "Similarly to the previous slide:\n",
     "\\begin{align*}\n",
@@ -1471,7 +1471,7 @@
    },
    "source": [
     "<center>\n",
-    "<img width=\"600\" src=\"img/nns/backprop/backprop-twolayers-figure8.png\">\n",
+    "<img width=\"600\" src=\"../img/nns/backprop/backprop-twolayers-figure8.png\">\n",
     "</center>\n",
     "Since we have another linear layer with sigmoid activation, the way we compute gradients will be the same as in the output layer.\n",
     "\n",
@@ -1491,7 +1491,7 @@
    },
    "source": [
     "<center>\n",
-    "<img width=\"700\" src=\"img/nns/backprop/backprop-twolayers-figure9.png\">\n",
+    "<img width=\"700\" src=\"../img/nns/backprop/backprop-twolayers-figure9.png\">\n",
     "</center>\n",
     "We can compute the rest the same way.\n",
     "\n",
@@ -1507,7 +1507,7 @@
    },
    "source": [
     "<center>\n",
-    "<img width=\"700\" src=\"img/nns/backprop/backprop-twolayers-figure10.png\">\n",
+    "<img width=\"700\" src=\"../img/nns/backprop/backprop-twolayers-figure10.png\">\n",
     "</center>\n",
     "\n",
     "And now we have the gradients to all the learnable weights in this two layer network and we can tune the weights by gradient descenet.\n",
