Fix image references. Update README.md

--- a/notebooks/lecture21-model-iteration.ipynb
+++ b/notebooks/lecture21-model-iteration.ipynb
@@ -10,7 +10,7 @@
     }
    },
    "source": [
-    "<left><img width=25% src=\"img/cornell_tech2.svg\"></left>\n",
+    "<left><img width=25% src=\"../img/cornell_tech2.svg\"></left>\n",
     "\n",
     "# Lecture 21: Model Iteration and Improvement\n",
     "\n",
@@ -732,7 +732,7 @@
     }
    },
    "source": [
-    "<left><img width=25% src=\"img/cornell_tech2.svg\"></left>\n",
+    "<left><img width=25% src=\"../img/cornell_tech2.svg\"></left>\n",
     "\n",
     "# Part 2: Bias/Variance Analysis\n",
     "\n",
@@ -1461,7 +1461,7 @@
     }
    },
    "source": [
-    "<left><img width=25% src=\"img/cornell_tech2.svg\"></left>\n",
+    "<left><img width=25% src=\"../img/cornell_tech2.svg\"></left>\n",
     "\n",
     "# Part 3: Baselines\n",
     "\n",
