--- a/notebooks/lecture20-evaluation.ipynb
+++ b/notebooks/lecture20-evaluation.ipynb
@@ -10,7 +10,7 @@
     }
    },
    "source": [
-    "<left><img width=25% src=\"img/cornell_tech2.svg\"></left>\n",
+    "<left><img width=25% src=\"../img/cornell_tech2.svg\"></left>\n",
     "\n",
     "# Lecture 20: Developing and Evaluating Machine Learning Models\n",
     "\n",
@@ -403,7 +403,7 @@
     }
    },
    "source": [
-    "<left><img width=25% src=\"img/cornell_tech2.svg\"></left>\n",
+    "<left><img width=25% src=\"../img/cornell_tech2.svg\"></left>\n",
     "\n",
     "# Part 2: Evaluating Classification Models\n",
     "\n",
@@ -826,7 +826,7 @@
     }
    },
    "source": [
-    "<left><img width=25% src=\"img/cornell_tech2.svg\"></left>\n",
+    "<left><img width=25% src=\"../img/cornell_tech2.svg\"></left>\n",
     "\n",
     "# Part 3: Advanced Classification Metrics\n",
     "\n",
@@ -1190,7 +1190,7 @@
     }
    },
    "source": [
-    "<left><img width=25% src=\"img/cornell_tech2.svg\"></left>\n",
+    "<left><img width=25% src=\"../img/cornell_tech2.svg\"></left>\n",
     "# Part 4: Evaluating Regression Models\n",
     "\n",
     "The first step towards building better ML models is to determine how to *evaluate* them.\n",
