--- a/notebooks/lecture22-evaluation-tools.ipynb
+++ b/notebooks/lecture22-evaluation-tools.ipynb
@@ -10,7 +10,7 @@
     }
    },
    "source": [
-    "<left><img width=25% src=\"img/cornell_tech2.svg\"></left>\n",
+    "<left><img width=25% src=\"../img/cornell_tech2.svg\"></left>\n",
     "\n",
     "# Lecture 22: Tools for Diagnosing Model Performance\n",
     "\n",
@@ -134,7 +134,7 @@
     "# Learning Curves\n",
     "\n",
     "Learning curves show performance as a function of __training set size__.\n",
-    "<center><img width=60% src=\"img/learning_curve1.png\"></center>\n",
+    "<center><img width=60% src=\"../img/learning_curve1.png\"></center>\n",
     "\n",
     "Learning curves are defined for __fixed hyperparameters__. Observe that dev set error decreases as we give the model more data."
    ]
@@ -150,7 +150,7 @@
     "# Visualizing Ideal Performance\n",
     "\n",
     "It is often very useful to have a target upper bound on performance (e.g., human accuracy); it can also be visualized on the learning curve.\n",
-    "<center><img width=60% src=\"img/learning_curve2.png\"></center>\n",
+    "<center><img width=60% src=\"../img/learning_curve2.png\"></center>\n",
     "Extrapolating the red curve suggests how much additional data we need."
    ]
   },
@@ -163,7 +163,7 @@
    },
    "source": [
     "In the example below, the dev error has plateaued and we know that adding more data will not be useful.\n",
-    "<center><img width=80% src=\"img/learning_curve3.png\"></center>"
+    "<center><img width=80% src=\"../img/learning_curve3.png\"></center>"
    ]
   },
   {
@@ -177,7 +177,7 @@
     "# Learning Curves for the Training Set\n",
     "\n",
     "We can further augment this plot with training set performance.\n",
-    "<center><img width=70% src=\"img/learning_curve4.png\"></center>\n",
+    "<center><img width=70% src=\"../img/learning_curve4.png\"></center>\n",
     "The blue curve shows training error as a function of training set size."
    ]
   },
@@ -205,7 +205,7 @@
     "# Diagnosing High Bias\n",
     "\n",
     "Learning curves can reveal when we have a bias problem.\n",
-    "<center><img width=60% src=\"img/learning_curve5.png\"></center>\n",
+    "<center><img width=60% src=\"../img/learning_curve5.png\"></center>\n",
     "Here, the model can't fit larger datasets, hence it's underfitting."
    ]
   },
@@ -218,7 +218,7 @@
    },
    "source": [
     "In practice, in can be hard to visually assess if the dev error has plateaued. Adding the training error makes this easier.\n",
-    "<center><img width=60% src=\"img/learning_curve6.png\"></center>\n",
+    "<center><img width=60% src=\"../img/learning_curve6.png\"></center>\n",
     "Here, adding data can no longer help: the blue error can only increase and thus dev error cannot decrease."
    ]
   },
@@ -233,7 +233,7 @@
     "# Relationship to Bias/Variance Analysis\n",
     "\n",
     "Bias/variance analysis correspond to looking at the very last point on the learning curves.\n",
-    "<center><img width=60% src=\"img/learning_curve6.png\"></center>\n",
+    "<center><img width=60% src=\"../img/learning_curve6.png\"></center>\n",
     "Looking at the entire curve ensures a more reliable diagnosis."
    ]
   },
@@ -248,7 +248,7 @@
     "# Diagnosing High Variance\n",
     "\n",
     "The following plot shows we have high variance.\n",
-    "<center><img width=70% src=\"img/learning_curve7.png\"></center>\n",
+    "<center><img width=70% src=\"../img/learning_curve7.png\"></center>\n",
     "Training error is small (near optimal), but dev set error is large. We can address this by adding more data."
    ]
   },
@@ -261,7 +261,7 @@
    },
    "source": [
     "In this plot, we have both high variance and high bias.\n",
-    "<center><img width=70% src=\"img/learning_curve8.png\"></center>\n",
+    "<center><img width=70% src=\"../img/learning_curve8.png\"></center>\n",
     "The training error significantly exceeds desired performance, and the dev set error is even higher."
    ]
   },
@@ -541,7 +541,7 @@
     }
    },
    "source": [
-    "<left><img width=25% src=\"img/cornell_tech2.svg\"></left>\n",
+    "<left><img width=25% src=\"../img/cornell_tech2.svg\"></left>\n",
     "\n",
     "# Part 2: Loss Curves\n",
     "\n",
@@ -621,7 +621,7 @@
     "# Diagnosing Bias and Variance\n",
     "\n",
     "Loss curves provide another way to diagnose bias and variance.\n",
-    "<center><img width=60% src=\"img/loss_curve1.png\"></center>"
+    "<center><img width=60% src=\"../img/loss_curve1.png\"></center>"
    ]
   },
   {
@@ -659,7 +659,7 @@
     "# Overtraining\n",
     "\n",
     "A failure mode of some machine learning algorithms is *overtraining*.\n",
-    "<center><img width=50% src=\"img/loss_curve3.png\"></center>\n",
+    "<center><img width=50% src=\"../img/loss_curve3.png\"></center>\n",
     "Model performance worsens after some number of training steps. The solution is to train for less or preferrably to regularize the model."
    ]
   },
@@ -687,7 +687,7 @@
     "# Diagnosing Optimization Issues\n",
     "\n",
     "Loss curves also enable diagnosing optimization problems.\n",
-    "<center><img width=50% src=\"img/loss_curve2.png\"></center>\n",
+    "<center><img width=50% src=\"../img/loss_curve2.png\"></center>\n",
     "Here, we show training set accuracy for different learning rates."
    ]
   },
@@ -732,7 +732,7 @@
     }
    },
    "source": [
-    "<left><img width=25% src=\"img/cornell_tech2.svg\"></left>\n",
+    "<left><img width=25% src=\"../img/cornell_tech2.svg\"></left>\n",
     "\n",
     "# Part 3: Validation Curves\n",
     "\n",
@@ -985,7 +985,7 @@
     }
    },
    "source": [
-    "<left><img width=25% src=\"img/cornell_tech2.svg\"></left>\n",
+    "<left><img width=25% src=\"../img/cornell_tech2.svg\"></left>\n",
     "\n",
     "# Part 4: Distribution Mismatch\n",
     "\n",
