Fix image references.

--- a/notebooks/lecture16-decision-trees.ipynb
+++ b/notebooks/lecture16-decision-trees.ipynb
@@ -504,7 +504,7 @@
             "source": [
                 "We can illustrate decision regions via this figure from Hastie et al.\n",
                 "\n",
-                "<center><img width=50% src=\"img/decision_tree.png\"></center>"
+                "<center><img width=50% src=\"../img/decision_tree.png\"></center>"
             ]
         },
         {
