--- a/notebooks/lecture23-overview.ipynb
+++ b/notebooks/lecture23-overview.ipynb
@@ -10,7 +10,7 @@
     }
    },
    "source": [
-    "<left><img width=25% src=\"img/cornell_tech2.svg\"></left>\n",
+    "<left><img width=25% src=\"../img/cornell_tech2.svg\"></left>\n",
     "\n",
     "# Lecture 23: Course Overview\n",
     "\n",
@@ -62,7 +62,7 @@
     "# A Map of Applied Machine Learning\n",
     "\n",
     "We will go through the following map of algorithms from the course.\n",
-    "<center><img width=100% src=\"img/algorithms1.png\"></center>"
+    "<center><img width=100% src=\"../img/algorithms1.png\"></center>"
    ]
   },
   {
@@ -134,7 +134,7 @@
     }
    },
    "source": [
-    "<center><img width=100% src=\"img/algorithms3.png\"></center>"
+    "<center><img width=100% src=\"../img/algorithms3.png\"></center>"
    ]
   },
   {
@@ -228,7 +228,7 @@
     }
    },
    "source": [
-    "<center><img width=100% src=\"img/algorithms4.png\"></center>"
+    "<center><img width=100% src=\"../img/algorithms4.png\"></center>"
    ]
   },
   {
@@ -326,7 +326,7 @@
     }
    },
    "source": [
-    "<center><img width=100% src=\"img/algorithms5.png\"></center>"
+    "<center><img width=100% src=\"../img/algorithms5.png\"></center>"
    ]
   },
   {
@@ -424,7 +424,7 @@
     }
    },
    "source": [
-    "<center><img width=100% src=\"img/algorithms6.png\"></center>"
+    "<center><img width=100% src=\"../img/algorithms6.png\"></center>"
    ]
   },
   {
@@ -809,7 +809,7 @@
     }
    },
    "source": [
-    "<center><img width=100% src=\"img/algorithms7.png\"></center>"
+    "<center><img width=100% src=\"../img/algorithms7.png\"></center>"
    ]
   },
   {
@@ -863,7 +863,7 @@
     }
    },
    "source": [
-    "<center><img width=100% src=\"img/algorithms8.png\"></center>"
+    "<center><img width=100% src=\"../img/algorithms8.png\"></center>"
    ]
   },
   {
@@ -889,7 +889,7 @@
     }
    },
    "source": [
-    "<center><img width=100% src=\"img/algorithms9.png\"></center>"
+    "<center><img width=100% src=\"../img/algorithms9.png\"></center>"
    ]
   },
   {
@@ -916,7 +916,7 @@
     }
    },
    "source": [
-    "<center><img width=100% src=\"img/algorithms10.png\"></center>"
+    "<center><img width=100% src=\"../img/algorithms10.png\"></center>"
    ]
   },
   {
@@ -1006,7 +1006,7 @@
     "\n",
     "Raw data | Single Gaussian | Mixture of Gaussians\n",
     "--|--|---\n",
-    "<img width=90% src=\"img/oldfaithful_v2.png\"> | <img width=90% src=\"img/oldfSingle_v2.png\"> | <img width=90% src=\"img/oldfMOG_v2.png\">"
+    "<img width=90% src=\"../img/oldfaithful_v2.png\"> | <img width=90% src=\"../img/oldfSingle_v2.png\"> | <img width=90% src=\"../img/oldfMOG_v2.png\">"
    ]
   },
   {
@@ -1017,7 +1017,7 @@
     }
    },
    "source": [
-    "<center><img width=100% src=\"img/algorithms11.png\"></center>"
+    "<center><img width=100% src=\"../img/algorithms11.png\"></center>"
    ]
   },
   {
@@ -1028,7 +1028,7 @@
     }
    },
    "source": [
-    "<center><img width=100% src=\"img/algorithms12.png\"></center>"
+    "<center><img width=100% src=\"../img/algorithms12.png\"></center>"
    ]
   },
   {
@@ -1058,7 +1058,7 @@
    "source": [
     "We find $W$ using one of the following equivalent objectives (figure credit: [Alex Williams](http://alexhwilliams.info/itsneuronalblog/2016/03/27/pca/))\n",
     "\n",
-    "<center><img width=80% src=\"img/pca_two_views.png\"></center>"
+    "<center><img width=80% src=\"../img/pca_two_views.png\"></center>"
    ]
   },
   {
@@ -1069,7 +1069,7 @@
     }
    },
    "source": [
-    "<center><img width=100% src=\"img/algorithms13.png\"></center>"
+    "<center><img width=100% src=\"../img/algorithms13.png\"></center>"
    ]
   },
   {
@@ -1173,7 +1173,7 @@
    "source": [
     "# Thank You For Taking Applied Machine Learning!\n",
     "\n",
-    "<left><img width=25% src=\"img/cornell_tech2.svg\"></left>"
+    "<left><img width=25% src=\"../img/cornell_tech2.svg\"></left>"
    ]
   }
  ],
